kubernetes-your-first-project/cheeselore.com/_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cheeselore.com
  name: cheeselore-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cheeselore.com
  type: ClusterIP
status:
  loadBalancer: {}
