kubernetes-your-first-project/cheeselore.com/_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheeselore.com
spec:
  rules:
  - host: cheeselore.com
    http:
      paths:
      - backend:
          service:
            name: cheeselore-svc
            port:
              number: 80
        path: /
        pathType: Prefix # we don't want "Exact", we want "Prefix" to allow subpaths
